2006-08-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/log.py:
	  log the str() of an exception, more useful than just the first arg
	* flumotion/manager/component.py:
	  pass on on already handled component start errors

2006-08-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/log.py:
	  do not log an empty Exception.args[0]
	* flumotion/manager/component.py:
	  also add ConnectError (No route to host) as something to show an
	  error message for. Log the frame inside this file, so we do not
	  see a defgen frame.

2006-08-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/errors.py:
	  clarify args of ComponentError and BusyComponentError
	* flumotion/manager/component.py:
	  a component turning happy should clear its moodPending
	* flumotion/manager/manager.py:
	  reset moodPending when logging out
	* flumotion/test/test_manager_manager.py:
	  add fake eatFrom/feedTo
	  verify moodPending
	  fix test

2006-08-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/log.py:
	  clean up warningFailure, documenting it, and adding a
	  swallow boolean, that controls whether we propagate the failure or
	  not
	* flumotion/manager/component.py:
	  use swallow, so that our second errback can still function and
	  throw up a decent message when we can't start a component

2006-08-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/log.py:
	  add ellipsize function for long (+8 lines) strings
	* flumotion/common/medium.py:
	* flumotion/manager/admin.py:
	* flumotion/manager/base.py:
	* flumotion/twisted/pb.py:
	  use it.  This makes sure we don't see complete .pyc files in our logs
	* flumotion/test/test_bundle.py:
	  allow for logging

2006-08-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/manager/manager.py:
	  actually set moodPending, to make sure we don't start a component